<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <!-- Header: Status and Amount -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Success"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/green"
                    android:background="@drawable/bg_status_light"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_2sdp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/emiamounttitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Transfer Amt"
                        android:fontFamily="@font/inter_medium"
                        android:textColor="@color/darkgrey"
                        android:textSize="@dimen/_10ssp"/>

                    <TextView
                        android:id="@+id/withdrawAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="₹ 140.00"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/purple"/>

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bggrey"
                android:layout_marginBottom="@dimen/_8sdp"/>

            <!-- Details Section -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4">

                <!-- Row 1: Transaction ID -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_id"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/transactionid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="TXN000055"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"/>

                <!-- Row 2: Date -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/date"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/transactiondate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="08-08-2025"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"/>

                <!-- Row 3: Retailer Code -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/retailer_code"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/retailercode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="542371645"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"/>

                <!-- Row 4: Modes -->
                <LinearLayout
                    android:id="@+id/paymentModeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment_mode_label"
                            android:textSize="@dimen/_10ssp"
                            android:fontFamily="@font/inter_regular"
                            android:textColor="@color/darkgrey"/>
                        <TextView
                            android:id="@+id/payment_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Online"
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="end">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payout_mode_label"
                            android:textSize="@dimen/_10ssp"
                            android:fontFamily="@font/inter_regular"
                            android:textColor="@color/darkgrey"/>
                        <TextView
                            android:id="@+id/payout_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="CASH"
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                </LinearLayout>

            </GridLayout>

            <!-- Remarks -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/bggrey"
                android:padding="@dimen/_6sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remarks"
                    android:textSize="@dimen/_9ssp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/remarksmsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Successfully processed payout"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>